--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: A strict documentation format designed exclusively for AI agents. Four artifact types capture both the "why" behind decisions and the resulting rules and instructions.
   image:
-    file: ../../assets/houston.webp
+    file: ../../../public/logo.png
   actions:
     - text: Get Started
       link: /guides/getting-started/
